=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.98

   * support for 4-letter residue codes in PDB files

   * new selection operator for proteins "pepseq/ps." with 1-letter
     peptide codes

   * streamlined launch time in various ways

   * updated lighting model to increase WYSIWG characteristics
     between OpenGL and ray-tracing

   * fixed major bug with symmetry expansion

   * overhaul of the scene subsystem to create some order

   * orient command now chooses the least perturbation from the 
     current view

   * "as" command for more efficient changing of representations

   * reorganized color menus and added some new colors

   * selections now more visible

   * ribbon_side_chain_helper

   * new scroll wheel capabilities (MvSZ, MovZ)

   * used CHUD to optimize the new raytracer code

   * ray tracer now supports perspective by default.  Unfortunately, 
     this significantly slows down raytracing...

   * single-click actions

   * continued elimination of global state information

   * texture_fonts for better performance on low-end ATI hardware

   * fixed F10 action in external gui

   * added colors for each atomic element, plus deuterium

   * added 32 new automatic colors

   * fixed bugs with import pymol launch approach

   * fixed bug with TRJCONV multimodel PDB files

   * order command for managing entries in the control panel

   * P1M script format with embedded data & extra security

   * increased compatibility for variant MOL2 usage

   * various performance enhancements, esp. to MOL2 and SDF loads

   * fixed quiet setting for align function

   * surface optimize subsets setting

   * .pov file via save command

   * fixed bug with gadgetramp events

   * updated presets

   * cartoon_side_chain_helper setting

   * putty, and associated selections (thanks in part to Cameron Mura)
